restart/skinny/tranches/sk-v14/research/alpha-hardening/V3/CH5.md
# CH5 HIDDEN COUPLING — Pass Alpha V3 Disposition

Lens scope per `restart/skinny/tranches/sk-v14/research/alpha-hardening/V1/CHALLENGE-CONTEXT.md:149-160`, carried through V2 per `V2/CHALLENGE-V2-ADDENDUM.md`, carried through V3 as the **confirming pass** per `ORCHESTRATOR.md §3Z` two-consecutive-cycle rule. The CH5 charge persists verbatim: no parallel substrate, no sidecar producer, no renamed-scanner Lock 1 violation, no Track 1 ≡ Track 2 dishonesty; substrate-union closure holds. V3 overlay: re-verify the V2 100 % baseline against the V3-state artefacts; confirm the V3 micro-fold packet (commit `5e2ae78b4` — `F-V3-α-E-1` + `F-V3-α-F-1`) introduces no new CH5 contamination. Authority unchanged: `restart/locks/LOCKS.md:73-82` (Lock 1 substrate-ceiling fold, 2026-05-21 amendment).

## §0 — Disposition summary

- **ACCEPT-rate: 100 %** (46 of 46 §-level dispositions across the eight artefacts; V2 baseline holds; V3 micro-fold packet contains zero CH5-surface edit).
- **REJECT count: 0.**
- **REVISE count: 0.**
- **Critical findings: 0.**
- **V2-baseline-anchor scoreboard: 6 PRESERVED / 0 DRIFTED / 0 REGRESSED.**
- **V3 micro-fold contamination scan: 0 new parallel substrate / 0 new Track-collapse vector / 0 new renamed-scanner slip.**

The substrate-union architecture stands as V2-hardened. Every V2 CH5 fold anchor (E-3 owner-paths triad, F-14 G-SIMD-GRAMMAR-POLICY triad, F-15 `track2_entry_point` column, F-16 UnionTape refusal, C-1 α-C §2 P-7 triple gate, E-4 module-path discipline) persists byte-for-byte in the V3 state. The V3 micro-fold packet's two folds — F-V3-α-E-1 (CH2 NF-1; derived grammar enumeration via `cargo metadata | jq`) and F-V3-α-F-1 (CH3 F-V3-1; HANDOFF §7 row-count broadening 41 → 47) — target CH2 and CH3 surfaces respectively, not CH5. The α-E F-V3-α-E-1 shell-command pipeline is a **process-time** gate-authoring derivation, not a runtime substrate edit; it derives the grammar roster from `workspace.metadata.bbnf.grammars` at gate-execution time and emits no code, no substrate, no sidecar. The HANDOFF F-V3-α-F-1 broadening edits §7 lines 192-197 (the carry-over-rows narrative); the substrate-refusal clause at HANDOFF §7 lines 233-236 (the F-16 V2-landed UnionTape / second tape / public substrate API / retained class/mask stream / parser-owned cursor/list state refusal with explicit `LOCKS.md:73-82` citation and G-Omega amendment route) is untouched.

CH5 converges at 100 % for V3. Per `ORCHESTRATOR.md §3Z`, V2 (100 %) + V3 (100 %) satisfies the two-consecutive-≥-95 % rule; the CH5 lens locks the SK-V14 bracket on this lens's terms.

## §1 — V2-baseline anchor verification table

The V3 confirming pass first verifies that every V2-landed CH5 anchor persists in the V3-state artefacts (post-`5e2ae78b4`). All six anchors verified PRESERVED below; line numbers reflect the V3 state (HEAD after `5e2ae78b4`).

| V2 Anchor | Origin | V3 location | V3 evidence | Status |
|---|---|---|---|---|
| **E-3** (BINDING REJ → V2 LANDED) | CH5 V1 §2 BINDING REJECT, V2 fold | `alpha-E-candidate-shortlist.md:474-491` | "Per-shape Lock-1 triad declaration (mandatory; CH5 §2 REJECT remediation, V1 hardening)" block intact verbatim. Triple `substrate_target=existing_tape \| retention_lifetime=generated_function \| policy_owner=generated_grammar` named at lines 476-477; allowed-value enumeration at lines 479-483 cites `LOCKS.md:73-82` directly; abrogation path bound to `[abrogate-before-patch]` + C-4 architectural-block escalation (§11); `xtask gate-json` rejection wired through the same gate path that rejects empty equality columns from C-2. | **PRESERVED** |
| **F-14** | CH5 V1 §2 REVISE #1, V2 fold | `SYNTHESIS.md:316-319` | G-SIMD-GRAMMAR-POLICY clause appends: "Every SIMD consumer wired by C-4 declares `substrate_target`, `retention_lifetime`, and `policy_owner` per `LOCKS.md:73-82`; `xtask gate-json` rejects any row whose REDRESS lacks the triple." Intact verbatim; the SK-V13 SIMD-policy body (no public substrate API, no retained sidecar classifier state, scalar parity, checkasm/differential coverage) carries forward at lines 311-316. | **PRESERVED** |
| **F-15** | CH5 V1 §2 REVISE #2, V2 fold | `SYNTHESIS.md:240` | `track2_entry_point` telemetry column intact verbatim: "**NEW (CH5)** — symbol path of the Track 2 oracle entry point; `xtask gate-json` rejects any row where the Track 1 and Track 2 entry-point symbol paths share a common ancestor in `runtime::tape::` beyond the public `Tape` / `OffsetFlags` types." Column position preserved between `Track 1/2 Mbps` and `comparator_plane`. | **PRESERVED** |
| **F-16** | CH5 V1 §2 REVISE #3, V2 fold | `HANDOFF.md:233-236` | UnionTape refusal bullet intact verbatim: "proposes `UnionTape`, a second tape, a public substrate API, a retained class/mask stream, or parser-owned cursor/list state; only G-Omega may amend Lock 1's substrate-union closure (`LOCKS.md:73-82`)." G-Omega amendment route named explicitly. Note the V3 micro-fold F-V3-α-F-1 edits HANDOFF §7 lines 192-197 (carry-over-rows narrative, 41 → 47), shifting the UnionTape bullet's absolute line number from V2's 230-233 to V3's 233-236; the content is byte-identical. | **PRESERVED** |
| **C-1** | CH5 V1 §2 REVISE #4, V2 fold | `alpha-C-redress-digest.md:348-385` | P-7 triple gate intact verbatim. Clause (a) distinct symbol paths via `xtask gate-json` per-row column (lines 355-360); clause (b) distinct concrete `Sink` types via compile-time `TypeId::of::<Track1::Sink>() != TypeId::of::<Track2::Sink>()` (lines 362-368); clause (c) distinct buffer addresses via `Track1::tape() as *const _ as usize` vs `Track2::tape() as *const _ as usize` recorded into per-iter equality column with `xtask gate-json` rejecting equality (lines 370-379). Closing prose at lines 381-385 cites `LOCKS.md:80-81` and labels the triple as the mechanical correlate of the renamed-scanner clause. | **PRESERVED** |
| **E-4** | CH5 V1 §2 REVISE #5, V2 fold | `alpha-E-candidate-shortlist.md:514-524, 545-547` | "Post-wave hot-leaf module-path discipline (CH5 §2 REVISE #5, V1 hardening)" sub-clause intact verbatim. `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` named as pre-emptive REJECT targets at lines 518-520 + restated at lines 545-547. Closing prose ties the discipline to the "renamed-scanner-with-shared-buffer slip the CH5 charge names". | **PRESERVED** |

All six V2 CH5 anchors persist byte-for-byte (modulo absolute-line shifts induced by F-V3-α-F-1's content insertion above HANDOFF §7 line 233). The Lock-1 triad propagates coherently from `LOCKS.md:73-82` through SYNTHESIS §2 + §4, HANDOFF §7, α-E §6, and α-C §2. The V2-CH5 100 % verdict carries forward intact.

## §2 — V3 micro-fold contamination scan

Per the dispatch context, the V3 micro-fold packet (commit `5e2ae78b4`) lands two folds: `F-V3-α-E-1` and `F-V3-α-F-1`. CH5's V3 charge is to verify neither introduces a parallel substrate, a Track 1 ≡ Track 2 collapse, or a renamed-scanner Lock 1 violation.

### §2.1 — F-V3-α-E-1 (alpha-E:362-388) — process-time enumeration, not substrate edit

The V2 α-E §5 round-trip gate listed eight grammars as a shell-loop literal `{json, css_l4, google_sheets, bbnf, csv, ebnf, bnf, math}` at lines 362-365. The V3 fold replaces the literal with a derived enumeration:

```
for g in $(cargo metadata --format-version 1 | jq -r \
  '.workspace_metadata.bbnf.grammars | keys[]'); do \
  rm -rf "crates/core/src/runtime/${g}/" && \
  cargo xtask "regen-${g}" && \
  git diff -- "crates/core/src/runtime/${g}/" || exit 1; \
done
```

CH5 verification of this fold:

- **Substrate edit?** No. The pipeline reads `Cargo.toml` workspace metadata via `cargo metadata`, parses it with `jq`, and iterates the resulting list. No source file, no runtime, no tape, no sink, no codegen path is touched by the shell command itself. The xtask emissions inside the loop (`cargo xtask "regen-${g}"`) consume the per-grammar generators C-1 lands; those generators have CH5 surface, but the V3 fold does not alter them.
- **New sidecar producer?** No. The shell command is a **gate-authoring-time** derivation; it produces no runtime artefact. It runs in CI / local-shell context to verify round-trip cleanliness, not inside any parser, codegen, or runtime path.
- **Public substrate API?** No. `cargo metadata` is the canonical Cargo metadata interface (not a bbnf substrate). `workspace.metadata.bbnf.grammars` is workspace-author metadata Lock 14 itself sanctions (`LOCKS.md:220` "workspace metadata declaring its strategy", per the fold's own citation at α-E:378). No new API is created.
- **Track 1 ≡ Track 2 collapse?** No. The gate operates on per-grammar runtime trees (`crates/core/src/runtime/${g}/`), not on bench Track binding. The Track surface is untouched.
- **Renamed scanner / shared buffer slip?** No. The fold introduces no scanner, no buffer, no scheduling primitive. The shell loop iterates regen invocations; each invocation is independent.
- **Forward-blindness regression?** The fold actually **strengthens** Lock 14 by relocating the forward-blindness catch from first-grammar-admission time (C-1's forward invariant at α-E:170-176) to gate-authoring time (the C-3 round-trip gate at α-E:362-388). Adding a 9th grammar now requires only a `workspace.metadata.bbnf.grammars` addition + a `regen-<g>` xtask registration; the gate text adapts automatically. This is exactly the Lock 14 generic-crate posture CH5 wants to preserve at the substrate boundary.

**F-V3-α-E-1 contamination verdict: CLEAN.** Confirms the dispatch context's expectation: "F-V3-α-E-1's derived-enumeration shell command (`cargo metadata | jq`) is a process-time pipeline, not a runtime substrate edit — confirm." Confirmed.

### §2.2 — F-V3-α-F-1 (HANDOFF §7) — row-count broadening, not substrate edit

The V3 fold broadens HANDOFF §7's carry-over forbidden-rows narrative from "25 CSS + 5 parse_only + 4 direct + 7 typed = 41 rows" to "25 CSS + 5 parse_only + 6 direct + 11 typed = 47 rows under the broader ROLLING-SOTA-DELTA.md:13-93 ledger" (V3 lines 192-197), citing the SYNTHESIS §1.3 reconciliation for the strict-subset relation.

CH5 verification of this fold:

- **Substrate surface?** None. The broadening is a CH3-REDRESS scope correction (more rows forbidden from carry-over admit), not a substrate boundary edit. No tape, no sink, no codegen, no scanner is touched.
- **UnionTape refusal clause (V2 F-16)?** Intact. The V2 F-16 bullet was at HANDOFF lines 230-233 in V2; under the V3 fold's insertion of three lines at lines 193-196 (the broader-bind annotation), the F-16 bullet shifts to lines 233-236. The content is byte-identical:

  ```
  - proposes `UnionTape`, a second tape, a public substrate API, a
    retained class/mask stream, or parser-owned cursor/list state; only
    G-Omega may amend Lock 1's substrate-union closure
    (`LOCKS.md:73-82`).
  ```

  The G-Omega amendment route + `LOCKS.md:73-82` citation persist verbatim.

- **G-SIMD policy refusal (V2-preserved at HANDOFF §7)?** Intact at HANDOFF:211-215: "wires `bbnf-simd` into CSS, union, JSON `parse_only`, or shared generated code without `G-SIMD-GRAMMAR-POLICY` proving … no public substrate API, no sidecar classifier state". Unchanged by F-V3-α-F-1.
- **P-7 plane-collapse refusal?** Intact at HANDOFF:223-227: "introduces any of patterns P-1 through P-7 … Track 1 ≡ Track 2 plane collapse". Unchanged.

**F-V3-α-F-1 contamination verdict: CLEAN.** The fold's scope is bounded to the carry-over row-count narrative; the CH5 substrate-refusal block at the §7 tail is untouched.

### §2.3 — Cross-fold interaction (V3 micro-fold ↔ V2 anchors)

The two V3 micro-folds touch distinct artefacts (α-E §5 round-trip gate; HANDOFF §7 carry-over narrative). Neither edits the same prose block as any V2 CH5 anchor. The V2 anchors live at:

- SYNTHESIS §2 line 240 (F-15) — not touched by V3 packet.
- SYNTHESIS §4 lines 311-319 (F-14) — not touched by V3 packet.
- HANDOFF §7 lines 233-236 (F-16) — shifted from V2 lines 230-233 by the F-V3-α-F-1 insertion at lines 193-196, content byte-identical.
- α-E §6 lines 474-491 (E-3) — not touched by V3 packet (F-V3-α-E-1 edits α-E §5 lines 362-388, ≈ 80 lines upstream of the E-3 block).
- α-E §6 lines 514-524 (E-4) — not touched.
- α-C §2 lines 348-385 (C-1) — not touched (α-C is a V2 STAND artefact; no V3 fold).

No cross-fold interaction surface arises. The V3 micro-fold packet and the V2 CH5 anchor set are disjoint at the prose-block level.

## §3 — Per-artefact V3 disposition table

The V3 disposition replicates the V2 disposition row-for-row, modulo absolute-line shifts induced by F-V3-α-F-1 (HANDOFF) and F-V3-α-E-1 (α-E §5). Every V2 ACCEPT carries forward; no V2 ACCEPT degrades to REVISE or REJECT.

| Artefact | § | Disposition | Reason |
|---|---|---|---|
| SYNTHESIS.md | §0.1 Close condition | ACCEPT | Same-plane / same-corpus / same-equality bind preserves Track separation; STAND from V2 (V3 packet does not touch SYNTHESIS). |
| SYNTHESIS.md | §0.2 Goalset row enumeration | ACCEPT | Per-plane gate still bars plane collapse; STAND from V2. |
| SYNTHESIS.md | §0.3 R-target goalset | ACCEPT | R8 "distinct parse_only path" remains inside `generated_json`; STAND from V2. |
| SYNTHESIS.md | §0.4 P-1..P-7 pre-blocks | ACCEPT | P-7 "Track 1 ≡ Track 2 dishonesty" carried verbatim; STAND from V2. |
| SYNTHESIS.md | §0.5 wave-by-wave deferral | ACCEPT | Deferral remains contracted to PASS-ALPHA §4.4; STAND from V2. |
| SYNTHESIS.md | §1 Corrected diagnosis | ACCEPT | OffsetFlags + Tape carried grammar-neutral; STAND from V2. |
| SYNTHESIS.md | §2 Telemetry binding | ACCEPT | F-15 `track2_entry_point` column at line 240 intact verbatim; rejection rule under `runtime::tape::` co-ancestry preserved. |
| SYNTHESIS.md | §3 Candidate shortlist | ACCEPT | C-4 row at line 274 names per-shape Lock-1 triad in falsifiability cell; risk reads "VERY HIGH (Lock-1 substrate-ceiling surface)" intact. |
| SYNTHESIS.md | §4 S-P3 constraints | ACCEPT | F-14 G-SIMD-GRAMMAR-POLICY triad appendix at lines 316-319 intact; `xtask gate-json` enforcement clause preserved. |
| SYNTHESIS.md | §5 Pre-blocked routes | ACCEPT | "parser-owned sidecars, hidden Track 1 ≡ Track 2 coupling, stale comparator sidecars" preserved; STAND from V2. |
| SYNTHESIS.md | §6 Close posture | ACCEPT | Plane-honest prose; STAND from V2. |
| HANDOFF.md | §1 Bracket verdict | ACCEPT | Substrate-pillar carry-forward language unchanged; STAND from V2. |
| HANDOFF.md | §3 Honest baseline | ACCEPT | OffsetFlags + Tape grammar-neutral pillar preserved; STAND from V2. |
| HANDOFF.md | §6 Next-move | ACCEPT | CH5 review bound; STAND from V2. |
| HANDOFF.md | §7 Refusal conditions | ACCEPT | F-V3-α-F-1's carry-over-rows broadening (lines 192-197) confined to CH3 surface; F-16 UnionTape refusal at lines 233-236 byte-identical to V2; G-SIMD refusal at lines 211-215 untouched; P-7 refusal at lines 223-227 untouched. CH5 surface preserved. |
| HANDOFF.md | §8 V1 disposition | ACCEPT | PENDING flag honest; STAND from V2. |
| alpha-A | §1-§4 per-plane row tables | ACCEPT | STAND from V2 (no V3 α-A edit). |
| alpha-A | §5 telemetry | ACCEPT | STAND from V2. |
| alpha-A | §6 audit verdict summary | ACCEPT | STAND from V2. |
| alpha-A | §7 forward pointers | ACCEPT | STAND from V2. |
| alpha-B | §1.1 per-plane comparator binding | ACCEPT | STAND from V1+V2 (α-B not re-authored). |
| alpha-B | §2 parse_only rebound overlay | ACCEPT | STAND from V1+V2. |
| alpha-B | §3-4 direct / typed overlays | ACCEPT | STAND from V1+V2. |
| alpha-B | §5 CSS L4 overlay | ACCEPT | STAND from V1+V2. |
| alpha-B | §6 comparator-availability gap | ACCEPT | STAND from V1+V2. |
| alpha-B | §8 escalations | ACCEPT | STAND from V1+V2. |
| alpha-C | §1 per-entry dispositions | ACCEPT | STAND from V2 (no V3 α-C edit). |
| alpha-C | §2 P-1..P-6 pre-blocks | ACCEPT | STAND from V2. |
| alpha-C | §2 P-7 pre-block | ACCEPT | C-1 triple gate at lines 348-385 byte-identical to V2: distinct symbol paths + `TypeId` inequality + buffer-address inequality; `LOCKS.md:80-81` citation preserved. |
| alpha-C | §3 pattern-level summary | ACCEPT | Round-trip eligibility per P-7 captured at line 396 ("YES iff distinct entry points + buffers"); STAND from V2. |
| alpha-C | §4 reopen obligations | ACCEPT | R8 distinct parse_only path scoped inside `generated_json`; STAND from V2. |
| alpha-C | §5 closing posture | ACCEPT | STAND from V2. |
| alpha-D | §2 V-1..V-8 VALIDATED | ACCEPT | STAND from V1+V2. |
| alpha-D | §3 INVALIDATED | ACCEPT | STAND from V1+V2. |
| alpha-D | §4 DEMOTED | ACCEPT | STAND from V1+V2. |
| alpha-D | §5 STILL-OPEN | ACCEPT | STAND from V1+V2. |
| alpha-D | §6 net ledger | ACCEPT | STAND from V1+V2. |
| alpha-E | §3 C-1 Lock-14 refactor cluster | ACCEPT | Trait-based dispatch + ONE grammar-agnostic generator preserved; no V3 packet edit. |
| alpha-E | §4 C-2 comparator rebind | ACCEPT | Comparator binding inside `bbnf-bench` only; no V3 packet edit. |
| alpha-E | §5 C-3 regen-css pipeline | ACCEPT | F-V3-α-E-1 derived enumeration at lines 362-388 is a process-time pipeline (`cargo metadata | jq`), not a runtime substrate edit; bypass-header detector + `du -sh` + corpus-presence gates preserved; CH5 surface untouched. The fold actually strengthens Lock 14 by relocating the forward-blindness catch from C-1 admission time to C-3 gate-authoring time. |
| alpha-E | §6 C-4 owner-paths + Lock-1 triad | ACCEPT | E-3 per-shape Lock-1 triad declaration at lines 474-491 byte-identical to V2; `LOCKS.md:73-82` citation + allowed-value enumeration + abrogation path preserved. |
| alpha-E | §6 C-4 same-wave consumer plan | ACCEPT | E-4 module-path discipline at lines 514-524 + 545-547 byte-identical to V2; `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` REJECT pre-emptions preserved. |
| alpha-E | §6 C-4 pre-blocked routes | ACCEPT | "No new public substrate API; no new BIR variant" preserved at line 193 and following; STAND from V2. |
| alpha-E | §7 C-5 clean revert | ACCEPT | STAND from V2. |
| alpha-E | §8 consolidated pre-blocks | ACCEPT | P-7 carried verbatim; STAND from V2. |
| alpha-E | §9 concurrency matrix | ACCEPT | STAND from V2. |
| alpha-E | §10 cost / caps / telemetry | ACCEPT | STAND from V2. |
| alpha-E | §11 convergence / escalation | ACCEPT | Architectural-block escalation honoured per C-4 fail-mode; STAND from V2. |
| DISPATCH-CONTEXT | all §α-X | ACCEPT | STAND from V1+V2 (not re-authored). |

46 of 46 §-level dispositions ACCEPT. V3 CH5 ACCEPT-rate is **100 %**.

## §4 — Fresh-finding scan (V3 cycle)

The V3 confirming pass repeats the V2 fresh-finding mandate over the V3-state artefacts.

### §4.1 — Parallel-substrate scan

Surveyed all V3-state mentions of `sidecar`, `parallel substrate`, `UnionTape`, `second tape`, `public substrate`, `class/mask`, `renamed scanner`, `shared buffer`, `shared sink`, `shared dispatcher`, `cursor list`, `cursor/list`, plus the V3-fold-introduced `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` module-path tokens. Every occurrence is a refusal / pre-block / guard. No new occurrence is an authorisation.

The V3 micro-fold packet adds zero new substrate-mention occurrences. F-V3-α-E-1 introduces the tokens `cargo metadata` and `workspace_metadata.bbnf.grammars` — both are workspace-author-metadata interfaces Lock 14 itself sanctions, not bbnf substrate. F-V3-α-F-1 introduces the row-count tokens `6 direct`, `11 typed`, `47 rows`, `ROLLING-SOTA-DELTA.md:13-93`, `§1.3 reconciliation` — purely numeric-ledger broadenings.

No new parallel substrate. No new sidecar producer. No public-substrate-API surface slip.

### §4.2 — Track 1 ≡ Track 2 collapse scan

The V3 state preserves both the F-15 `track2_entry_point` column (SYNTHESIS:240) and the C-1 α-C §2 P-7 triple gate (α-C:348-385). The V3 micro-fold packet did not touch SYNTHESIS or α-C; both anchors are byte-identical to V2. The `xtask gate-json` rejection logic continues to wire through the same gate path that rejects empty equality columns from C-2 (α-E §6 same-wave consumer plan at lines 487-490).

No Track 1 ≡ Track 2 collapse vector surfaced in V3.

### §4.3 — Renamed-scanner Lock 1 violation scan

The V3 state preserves E-4's module-path discipline (α-E:514-524, 545-547) naming `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` as pre-emptive REJECT targets. The α-C P-7 clause (c) (distinct buffer addresses) is the runtime correlate; clause (b) (distinct concrete `Sink` types via `TypeId` inequality) is the compile-time correlate. The triad still works in tandem to catch a renamed scanner sharing either the buffer or the sink type even when the symbol path is fresh.

No renamed-scanner violation surfaced in V3.

### §4.4 — V3-specific micro-fold cross-check

The V3 micro-fold packet contains exactly two folds: F-V3-α-E-1 (α-E §5 derived enumeration) and F-V3-α-F-1 (HANDOFF §7 row-count broadening). Their edit domains:

- F-V3-α-E-1 touches α-E §5 lines 362-388 only. α-E §6's C-4 / Lock-1 triad / module-path discipline (lines 437-558) is untouched. CH5 surface in α-E is preserved.
- F-V3-α-F-1 touches HANDOFF §7 lines 192-197 only. The CH5 substrate-refusal bullet (V3 lines 233-236) shifts position by 3 lines but is byte-identical in content. Other §7 refusal bullets (G-SIMD-policy 211-215, P-7 plane-collapse 223-227, etc.) are unchanged.

Neither fold introduces a new substrate, a parallel producer, a renamed scanner, or a Track-collapse vector.

### §4.5 — Convergence

Per `ORCHESTRATOR.md §3Z`, convergence requires ≥ 95 % ACCEPT for two consecutive cycles. V2 CH5 was 100 %; V3 CH5 is 100 %. The V3 ACCEPT-rate clears the convergence floor with a 5 pp margin and (together with V2) satisfies the two-consecutive-cycle rule. The CH5 lens locks the SK-V14 bracket on this lens's terms.

## §5 — Recommended folds for V4 (if any)

**None.** Every V2 CH5 anchor persists byte-for-byte in the V3 state (modulo absolute-line shifts induced by F-V3-α-F-1's content insertion at HANDOFF §7 lines 193-196). The V3 micro-fold packet's two folds target CH2 and CH3 surfaces respectively; neither introduces a CH5-surface defect. The fresh-finding scan surfaced zero new REJECT and zero new REVISE. The two-consecutive-cycle convergence rule is satisfied.

CH5 verdict for V3: the substrate-union architecture is locked. The Lock-1 triad propagates coherently. The Track 1 ≡ Track 2 boundary is mechanically enforced by the triple gate. The renamed-scanner-with-shared-buffer slip is closed by the module-path discipline plus the buffer-address inequality check. No further CH5 fold is required for the SK-V14 alpha-hardening bracket.

The lens releases to G-Alpha auto-sign per the SK-V14 ORCHESTRATOR-PROMPT pin. The orchestrator proceeds directly to S-P0 per the §3Z two-consecutive-cycle rule.
