restart/skinny/tranches/sk-v14/research/alpha-hardening/V4/CH5.md
# CH5 HIDDEN COUPLING — Pass Alpha V4 Disposition

Lens scope per `restart/skinny/tranches/sk-v14/research/alpha-hardening/V1/CHALLENGE-CONTEXT.md:149-160`, carried through V2 per `V2/CHALLENGE-V2-ADDENDUM.md`, carried through V3 + V4 as confirming-pass overlays per `ORCHESTRATOR.md §3Z`. The CH5 charge persists verbatim: no parallel substrate, no sidecar producer, no renamed-scanner Lock 1 violation, no Track 1 ≡ Track 2 dishonesty; substrate-union closure holds. V4 overlay: re-verify the V3 100 % baseline against the V4-state artefacts; confirm the V4 micro-fold packet (commit `5e00b6d27` — `F-V4-α-E-1` jq path repair + `F-V4-α-F-1` HANDOFF citation correction) introduces no new CH5 contamination. Authority unchanged: `restart/locks/LOCKS.md:73-82` (Lock 1 substrate-ceiling fold, 2026-05-21 amendment).

## §0 — Disposition summary

- **ACCEPT-rate: 100 %** (46 of 46 §-level dispositions across the eight artefacts; V2 + V3 baseline holds; V4 micro-fold packet contains zero CH5-surface edit).
- **REJECT count: 0.**
- **REVISE count: 0.**
- **Critical findings: 0.**
- **V2 / V3 baseline anchor scoreboard: 6 PRESERVED / 0 DRIFTED / 0 REGRESSED.**
- **V4 micro-fold contamination scan: 0 new parallel substrate / 0 new Track-collapse vector / 0 new renamed-scanner slip.**

The substrate-union architecture stands as V2-hardened, V3-confirmed, and V4-preserved. Every V2 CH5 anchor (E-3 owner-paths triad, F-14 G-SIMD-GRAMMAR-POLICY triad, F-15 `track2_entry_point` column, F-16 UnionTape refusal, C-1 α-C §2 P-7 triple gate, E-4 module-path discipline) persists byte-for-byte at the same V3 line addresses in the V4 state. The V4 micro-fold packet's two folds — F-V4-α-E-1 (CH1 V3 REV-1 remediation; jq path correction + `--no-deps` + `--exit-code` + roster-count generalisation at α-E:362-387) and F-V4-α-F-1 (CH1 V3 REV-2 remediation; HANDOFF §7 citation anchor correction `§1.3` → `§0.2` at line 196) — both target CH1 surfaces (executable-correctness of a shipped shell command; documentary citation-resolution). Neither edits a CH5 surface. The V4 alpha-E edit substitutes 12 lines for 12 lines in the C-3 round-trip gate region (lines 362-387), inducing zero net line shift; the V4 HANDOFF edit replaces one inline citation token, inducing zero line shift. Consequently the E-3 anchor remains at `alpha-E:474-491`, E-4 remains at `alpha-E:514-524 + 545-547`, F-16 remains at `HANDOFF:233-236`, F-14 remains at `SYNTHESIS:316-319`, F-15 remains at `SYNTHESIS:240`, and C-1 remains at `α-C:348-385`. All citations from V3 forward without translation.

CH5 converges at 100 % for V4. Combined with CH5 V2 (100 %) and CH5 V3 (100 %), the lens has now logged three consecutive ≥ 95 % cycles — twice the `ORCHESTRATOR.md §3Z` two-consecutive-cycle ceiling. The CH5 lens has been at lock-state since V2; V3 and V4 simply reconfirm. No further CH5 fold is required for the SK-V14 alpha-hardening bracket.

## §1 — V2 / V3 baseline anchor verification table (V4 state)

The V4 confirming pass re-verifies that every V2-landed, V3-preserved CH5 anchor persists in the V4-state artefacts (post-`5e00b6d27`). All six anchors verified PRESERVED below; line numbers reflect the V4 state.

| V2 Anchor | Origin | V4 location | V4 evidence | Status |
|---|---|---|---|---|
| **E-3** (BINDING REJ → V2 LANDED) | CH5 V1 §2 BINDING REJECT, V2 fold | `alpha-E-candidate-shortlist.md:474-491` | "Per-shape Lock-1 triad declaration (mandatory; CH5 §2 REJECT remediation, V1 hardening)" block intact verbatim at line 474. Triple `substrate_target=existing_tape \| retention_lifetime=generated_function \| policy_owner=generated_grammar` named at lines 476-477; allowed-value enumeration at lines 479-483 cites `LOCKS.md:73-82` directly; abrogation path bound to `[abrogate-before-patch]` + C-4 architectural-block escalation (§11); `xtask gate-json` rejection wired through the same gate path that rejects empty equality columns from C-2. Zero line shift from V3 (the V4 α-E edit at lines 362-387 was 12-for-12 substitution). | **PRESERVED** |
| **F-14** | CH5 V1 §2 REVISE #1, V2 fold | `SYNTHESIS.md:316-319` | G-SIMD-GRAMMAR-POLICY clause appends: "Every SIMD consumer wired by C-4 declares `substrate_target`, `retention_lifetime`, and `policy_owner` per `LOCKS.md:73-82`; `xtask gate-json` rejects any row whose REDRESS lacks the triple." Intact verbatim; SYNTHESIS untouched by V4 packet. SIMD-policy body (no public substrate API, no retained sidecar classifier state, scalar parity, checkasm/differential coverage) carries forward at lines 311-316. | **PRESERVED** |
| **F-15** | CH5 V1 §2 REVISE #2, V2 fold | `SYNTHESIS.md:240` | `track2_entry_point` telemetry column intact verbatim at line 240: "**NEW (CH5)** — symbol path of the Track 2 oracle entry point; `xtask gate-json` rejects any row where the Track 1 and Track 2 entry-point symbol paths share a common ancestor in `runtime::tape::` beyond the public `Tape` / `OffsetFlags` types." Column position preserved between `Track 1/2 Mbps` and `comparator_plane`. SYNTHESIS untouched by V4 packet. | **PRESERVED** |
| **F-16** | CH5 V1 §2 REVISE #3, V2 fold | `HANDOFF.md:233-236` | UnionTape refusal bullet intact verbatim: "proposes `UnionTape`, a second tape, a public substrate API, a retained class/mask stream, or parser-owned cursor/list state; only G-Omega may amend Lock 1's substrate-union closure (`LOCKS.md:73-82`)." G-Omega amendment route named explicitly. V4 HANDOFF edit is confined to line 196 (in-line citation token); zero line shift propagates to the §7 tail. | **PRESERVED** |
| **C-1** | CH5 V1 §2 REVISE #4, V2 fold | `alpha-C-redress-digest.md:348-385` | P-7 triple gate intact verbatim. Clause (a) distinct symbol paths via `xtask gate-json` per-row column (lines 355-360); clause (b) distinct concrete `Sink` types via compile-time `TypeId::of::<Track1::Sink>() != TypeId::of::<Track2::Sink>()` (lines 362-368); clause (c) distinct buffer addresses via `Track1::tape() as *const _ as usize` vs `Track2::tape() as *const _ as usize` recorded into per-iter equality column with `xtask gate-json` rejecting equality (lines 370-379). Closing prose at lines 381-385 cites `LOCKS.md:80-81` and labels the triple as the mechanical correlate of the renamed-scanner clause. α-C STAND artefact since V2; not edited by V3 or V4 packets. | **PRESERVED** |
| **E-4** | CH5 V1 §2 REVISE #5, V2 fold | `alpha-E-candidate-shortlist.md:514-524, 545-547` | "Post-wave hot-leaf module-path discipline (CH5 §2 REVISE #5, V1 hardening)" sub-clause intact verbatim at line 514. `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` named as pre-emptive REJECT targets at lines 518-520 + restated at lines 545-547. Closing prose ties the discipline to the "renamed-scanner-with-shared-buffer slip the CH5 charge names". Zero line shift from V3. | **PRESERVED** |

All six V2 CH5 anchors persist byte-for-byte at the same V3 line addresses (the V4 micro-fold packet's 12-for-12 alpha-E substitution and 1-for-1 HANDOFF substitution induce zero line shift). The Lock-1 triad propagates coherently from `LOCKS.md:73-82` through SYNTHESIS §2 + §4, HANDOFF §7, α-E §6, and α-C §2. The V3 CH5 100 % verdict carries forward intact.

## §2 — V4 micro-fold contamination scan

Per the dispatch context, the V4 micro-fold packet (commit `5e00b6d27`) lands two folds: `F-V4-α-E-1` (CH1 V3 REV-1 remediation) and `F-V4-α-F-1` (CH1 V3 REV-2 remediation). CH5's V4 charge is to verify neither introduces a parallel substrate, a Track 1 ≡ Track 2 collapse, or a renamed-scanner Lock 1 violation.

### §2.1 — F-V4-α-E-1 (alpha-E:362-387) — process-time gate command repair, not substrate edit

The V3 fold introduced a derived-enumeration shell pipeline at α-E §5 lines 362-388 that V3 CH1 caught was execution-broken: `.workspace_metadata.bbnf.grammars | keys[]` is not a valid Cargo metadata path (the schema's top-level key is `.metadata`, and grammars are objects in an array, not map-keyed). The V4 fold rewrites the command to schema-correct form:

```
for g in $(cargo metadata --format-version 1 --no-deps | jq -r \
  '.metadata.bbnf.grammars[].ident'); do \
  rm -rf "crates/core/src/runtime/${g}/" && \
  cargo xtask "regen-${g}" && \
  git diff --exit-code -- "crates/core/src/runtime/${g}/" || exit 1; \
done
```

Additional V4 micro-changes inside the same region: (a) stale 8-grammar parenthetical `currently {json, css_l4, google_sheets, bbnf, csv, ebnf, bnf, math}` removed — the derived enumeration is now the single source; (b) `--no-deps` added to `cargo metadata` to bound output to workspace; (c) `--exit-code` added to `git diff` to make the round-trip gate properly fail-closed rather than relying on `|| exit 1` after a silently-zero exit status; (d) the "adding a 9th grammar" phrasing generalised to roster-count-agnostic "admitting an additional grammar" (the live workspace has nine grammars per V4 CH1's executable-verification mandate enumeration `bbnf, json, css_l4, css_pretty, google_sheets, ebnf, bnf, csv, math`).

CH5 verification of this V4 fold:

- **Substrate edit?** No. The dispatch context spells it out: "The `cargo metadata --no-deps` invocation is process-time gate-authoring; not a runtime substrate edit." The pipeline reads `Cargo.toml` workspace metadata via `cargo metadata`, parses it with `jq`, and iterates the resulting list. No source file, no runtime, no tape, no sink, no codegen path is touched by the shell command itself. The xtask emissions inside the loop (`cargo xtask "regen-${g}"`) consume the per-grammar generators C-1 lands; those generators have CH5 surface, but the V4 fold does not alter them.
- **New sidecar producer?** No. The shell command remains a gate-authoring-time derivation; it produces no runtime artefact. It runs in CI / local-shell context to verify round-trip cleanliness, not inside any parser, codegen, or runtime path. `--no-deps` actually narrows the surface (excludes transitive-dependency metadata from `cargo metadata` output).
- **Public substrate API?** No. `cargo metadata` remains the canonical Cargo metadata interface (not a bbnf substrate). `.metadata.bbnf.grammars[].ident` is workspace-author metadata Lock 14 itself sanctions (`LOCKS.md:220` "workspace metadata declaring its strategy", per the fold's own citation at α-E:378). The schema correction does not introduce a new API; it corrects the path into the existing one.
- **Track 1 ≡ Track 2 collapse?** No. The gate operates on per-grammar runtime trees (`crates/core/src/runtime/${g}/`), not on bench Track binding. The Track surface is untouched.
- **Renamed scanner / shared buffer slip?** No. The fold introduces no scanner, no buffer, no scheduling primitive. The shell loop iterates regen invocations; each invocation is independent. The `--exit-code` addition actually strengthens isolation by failing the loop on any non-empty diff, where the V3 form silently passed when `git diff` returned zero exit (since `--exit-code` was absent).
- **Forward-blindness regression?** The fold actually **further strengthens** Lock 14. V3 already relocated the forward-blindness catch from C-1 admission time to C-3 gate-authoring time; V4 (a) corrects the relocation to actually execute against the live schema and (b) generalises the "9th grammar" prose to roster-count-agnostic phrasing, removing a stale parenthetical that would have aged out of sync with the workspace as grammars are admitted. The corrected command was verified by V4 CH1's executable-verification mandate to enumerate nine grammars against the live workspace (one more than V3's stale enumeration; the discrepancy is `css_pretty`, which the V3 derived-enumeration text would have silently missed).

**F-V4-α-E-1 contamination verdict: CLEAN.** Confirms the dispatch context's expectation: "the `cargo metadata --no-deps` invocation is process-time gate-authoring; not a runtime substrate edit." Confirmed.

### §2.2 — F-V4-α-F-1 (HANDOFF:196) — citation token swap, not substrate edit

The V4 fold corrects a stale citation in HANDOFF §7 carry-over-rows narrative: V3 cited `SYNTHESIS.md §1.3` as the reconciliation anchor; V4 corrects to `SYNTHESIS.md §0.2` reconciliation block (lines 73-84). The edited line:

```
- inherits any of the audit-falsified admit rows (25 CSS + 5 parse_only
  + 6 direct + 11 typed = **47 rows** under the broader
  `ROLLING-SOTA-DELTA.md:13-93` ledger; the V1 dispatch §1 narrower
  bind of 4 direct + 7 typed is a strict subset per `SYNTHESIS.md
  §0.2` reconciliation block (lines 73-84)) as carry-over without fresh material
  differential under rebound comparator;
```

CH5 verification of this V4 fold:

- **Substrate surface?** None. The edit is a CH1 citation-correctness repair, not a substrate boundary edit. No tape, no sink, no codegen, no scanner is touched. The token swap is one citation reference (`§1.3` → `§0.2`) and one inline parenthetical (` reconciliation block (lines 73-84)`); the surrounding refusal-list semantics are unchanged.
- **UnionTape refusal clause (V2 F-16, V3-PRESERVED)?** Intact. The V4 edit is at HANDOFF line 196, four lines below the §7 list opening at line 185. The F-16 bullet at lines 233-236 is 37 lines below the edit site; the V4 edit is a single inline token swap (no insertion / deletion), so line numbers below the edit do not shift. The content is byte-identical:

  ```
  - proposes `UnionTape`, a second tape, a public substrate API, a
    retained class/mask stream, or parser-owned cursor/list state; only
    G-Omega may amend Lock 1's substrate-union closure
    (`LOCKS.md:73-82`).
  ```

  The G-Omega amendment route + `LOCKS.md:73-82` citation persist verbatim.

- **G-SIMD policy refusal (V2-preserved at HANDOFF §7)?** Intact at HANDOFF:211-215: "wires `bbnf-simd` into CSS, union, JSON `parse_only`, or shared generated code without `G-SIMD-GRAMMAR-POLICY` proving … no public substrate API, no sidecar classifier state". Unchanged by F-V4-α-F-1.
- **P-7 plane-collapse refusal?** Intact at HANDOFF:223-227: "introduces any of patterns P-1 through P-7 … Track 1 ≡ Track 2 plane collapse". Unchanged.

**F-V4-α-F-1 contamination verdict: CLEAN.** The fold's scope is bounded to one citation-token swap; the CH5 substrate-refusal block at the §7 tail is untouched and unchanged in absolute line position.

### §2.3 — Cross-fold interaction (V4 micro-fold ↔ V2 / V3 anchors)

The two V4 micro-folds touch distinct artefacts (α-E §5 round-trip gate at lines 362-387; HANDOFF §7 carry-over narrative at line 196). Neither edits the same prose block as any V2 or V3 CH5 anchor. The CH5 anchor positions in the V4 state:

- SYNTHESIS §2 line 240 (F-15) — not touched by V4 packet.
- SYNTHESIS §4 lines 311-319 (F-14) — not touched by V4 packet.
- HANDOFF §7 lines 233-236 (F-16) — F-V4-α-F-1 is a 1-for-1 inline swap at line 196 (no insertion / deletion); F-16 absolute line address is unchanged from V3.
- α-E §6 lines 474-491 (E-3) — not touched by V4 packet (F-V4-α-E-1 edits α-E §5 lines 362-387, ≈ 87 lines upstream; the 12-for-12 substitution induces zero net line shift).
- α-E §6 lines 514-524 + 545-547 (E-4) — not touched; same zero-line-shift logic.
- α-C §2 lines 348-385 (C-1) — not touched (α-C remains a V2 STAND artefact through V3 + V4; no fold has ever edited it).

No cross-fold interaction surface arises. The V4 micro-fold packet and the V2 / V3 CH5 anchor set are disjoint at the prose-block level.

## §3 — Per-artefact V4 disposition table

The V4 disposition replicates the V3 disposition row-for-row at the same V3 line addresses; zero net line shift from F-V4-α-E-1 (12-for-12 substitution) and zero line shift from F-V4-α-F-1 (1-for-1 inline token swap). Every V3 ACCEPT carries forward; no V3 ACCEPT degrades to REVISE or REJECT.

| Artefact | § | Disposition | Reason |
|---|---|---|---|
| SYNTHESIS.md | §0.1 Close condition | ACCEPT | Same-plane / same-corpus / same-equality bind preserves Track separation; STAND from V3 (V4 packet does not touch SYNTHESIS). |
| SYNTHESIS.md | §0.2 Goalset row enumeration | ACCEPT | Per-plane gate still bars plane collapse; STAND from V3. |
| SYNTHESIS.md | §0.3 R-target goalset | ACCEPT | R8 "distinct parse_only path" remains inside `generated_json`; STAND from V3. |
| SYNTHESIS.md | §0.4 P-1..P-7 pre-blocks | ACCEPT | P-7 "Track 1 ≡ Track 2 dishonesty" carried verbatim; STAND from V3. |
| SYNTHESIS.md | §0.5 wave-by-wave deferral | ACCEPT | Deferral remains contracted to PASS-ALPHA §4.4; STAND from V3. |
| SYNTHESIS.md | §1 Corrected diagnosis | ACCEPT | OffsetFlags + Tape carried grammar-neutral; STAND from V3. |
| SYNTHESIS.md | §2 Telemetry binding | ACCEPT | F-15 `track2_entry_point` column at line 240 intact verbatim; rejection rule under `runtime::tape::` co-ancestry preserved. |
| SYNTHESIS.md | §3 Candidate shortlist | ACCEPT | C-4 row at line 274 names per-shape Lock-1 triad in falsifiability cell; risk reads "VERY HIGH (Lock-1 substrate-ceiling surface)" intact. |
| SYNTHESIS.md | §4 S-P3 constraints | ACCEPT | F-14 G-SIMD-GRAMMAR-POLICY triad appendix at lines 316-319 intact; `xtask gate-json` enforcement clause preserved. |
| SYNTHESIS.md | §5 Pre-blocked routes | ACCEPT | "parser-owned sidecars, hidden Track 1 ≡ Track 2 coupling, stale comparator sidecars" preserved; STAND from V3. |
| SYNTHESIS.md | §6 Close posture | ACCEPT | Plane-honest prose; STAND from V3. |
| HANDOFF.md | §1 Bracket verdict | ACCEPT | Substrate-pillar carry-forward language unchanged; STAND from V3. |
| HANDOFF.md | §3 Honest baseline | ACCEPT | OffsetFlags + Tape grammar-neutral pillar preserved; STAND from V3. |
| HANDOFF.md | §6 Next-move | ACCEPT | CH5 review bound; STAND from V3. |
| HANDOFF.md | §7 Refusal conditions | ACCEPT | F-V4-α-F-1's inline citation swap (line 196, `§1.3` → `§0.2`) confined to CH1 citation-correctness surface; F-16 UnionTape refusal at lines 233-236 byte-identical to V3 and at unchanged absolute address (no line insertion / deletion); G-SIMD refusal at lines 211-215 untouched; P-7 refusal at lines 223-227 untouched. CH5 surface preserved. |
| HANDOFF.md | §8 V1 disposition | ACCEPT | PENDING flag honest; STAND from V3. |
| alpha-A | §1-§4 per-plane row tables | ACCEPT | STAND from V3 (no V4 α-A edit). |
| alpha-A | §5 telemetry | ACCEPT | STAND from V3. |
| alpha-A | §6 audit verdict summary | ACCEPT | STAND from V3. |
| alpha-A | §7 forward pointers | ACCEPT | STAND from V3. |
| alpha-B | §1.1 per-plane comparator binding | ACCEPT | STAND from V1+V2+V3 (α-B not re-authored). |
| alpha-B | §2 parse_only rebound overlay | ACCEPT | STAND from V1+V2+V3. |
| alpha-B | §3-4 direct / typed overlays | ACCEPT | STAND from V1+V2+V3. |
| alpha-B | §5 CSS L4 overlay | ACCEPT | STAND from V1+V2+V3. |
| alpha-B | §6 comparator-availability gap | ACCEPT | STAND from V1+V2+V3. |
| alpha-B | §8 escalations | ACCEPT | STAND from V1+V2+V3. |
| alpha-C | §1 per-entry dispositions | ACCEPT | STAND from V2+V3 (no V4 α-C edit). |
| alpha-C | §2 P-1..P-6 pre-blocks | ACCEPT | STAND from V2+V3. |
| alpha-C | §2 P-7 pre-block | ACCEPT | C-1 triple gate at lines 348-385 byte-identical to V2+V3: distinct symbol paths + `TypeId` inequality + buffer-address inequality; `LOCKS.md:80-81` citation preserved. |
| alpha-C | §3 pattern-level summary | ACCEPT | Round-trip eligibility per P-7 captured at line 396 ("YES iff distinct entry points + buffers"); STAND from V2+V3. |
| alpha-C | §4 reopen obligations | ACCEPT | R8 distinct parse_only path scoped inside `generated_json`; STAND from V2+V3. |
| alpha-C | §5 closing posture | ACCEPT | STAND from V2+V3. |
| alpha-D | §2 V-1..V-8 VALIDATED | ACCEPT | STAND from V1+V2+V3. |
| alpha-D | §3 INVALIDATED | ACCEPT | STAND from V1+V2+V3. |
| alpha-D | §4 DEMOTED | ACCEPT | STAND from V1+V2+V3. |
| alpha-D | §5 STILL-OPEN | ACCEPT | STAND from V1+V2+V3. |
| alpha-D | §6 net ledger | ACCEPT | STAND from V1+V2+V3. |
| alpha-E | §3 C-1 Lock-14 refactor cluster | ACCEPT | Trait-based dispatch + ONE grammar-agnostic generator preserved; no V4 packet edit. |
| alpha-E | §4 C-2 comparator rebind | ACCEPT | Comparator binding inside `bbnf-bench` only; no V4 packet edit. |
| alpha-E | §5 C-3 regen-css pipeline | ACCEPT | F-V4-α-E-1 schema-correct derived enumeration at lines 362-387 is a process-time pipeline (`cargo metadata --no-deps \| jq`), not a runtime substrate edit; bypass-header detector + `du -sh` + corpus-presence gates preserved; `--exit-code` addition strengthens fail-closed posture; CH5 surface untouched. The fold strengthens Lock 14 further by ensuring the round-trip catch actually executes against the live schema (V3 form silently no-op'd via jq null). |
| alpha-E | §6 C-4 owner-paths + Lock-1 triad | ACCEPT | E-3 per-shape Lock-1 triad declaration at lines 474-491 byte-identical to V2+V3; `LOCKS.md:73-82` citation + allowed-value enumeration + abrogation path preserved. Zero line shift from V3 (F-V4-α-E-1 was 12-for-12 substitution). |
| alpha-E | §6 C-4 same-wave consumer plan | ACCEPT | E-4 module-path discipline at lines 514-524 + 545-547 byte-identical to V2+V3; `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` REJECT pre-emptions preserved. |
| alpha-E | §6 C-4 pre-blocked routes | ACCEPT | "No new public substrate API; no new BIR variant" preserved at line 193 and following; STAND from V2+V3. |
| alpha-E | §7 C-5 clean revert | ACCEPT | STAND from V2+V3. |
| alpha-E | §8 consolidated pre-blocks | ACCEPT | P-7 carried verbatim; STAND from V2+V3. |
| alpha-E | §9 concurrency matrix | ACCEPT | STAND from V2+V3. |
| alpha-E | §10 cost / caps / telemetry | ACCEPT | STAND from V2+V3. |
| alpha-E | §11 convergence / escalation | ACCEPT | Architectural-block escalation honoured per C-4 fail-mode; STAND from V2+V3. |
| DISPATCH-CONTEXT | all §α-X | ACCEPT | STAND from V1+V2+V3 (not re-authored). |

46 of 46 §-level dispositions ACCEPT. V4 CH5 ACCEPT-rate is **100 %**.

## §4 — Fresh-finding scan (V4 cycle)

The V4 confirming pass repeats the V2 / V3 fresh-finding mandate over the V4-state artefacts.

### §4.1 — Parallel-substrate scan

Surveyed all V4-state mentions of `sidecar`, `parallel substrate`, `UnionTape`, `second tape`, `public substrate`, `class/mask`, `renamed scanner`, `shared buffer`, `shared sink`, `shared dispatcher`, `cursor list`, `cursor/list`, plus the V3-introduced `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` module-path tokens. Every occurrence is a refusal / pre-block / guard. No occurrence is an authorisation.

The V4 micro-fold packet adds zero new substrate-mention occurrences. F-V4-α-E-1 introduces only the corrected schema-path token `.metadata.bbnf.grammars[].ident` and the flags `--no-deps` + `--exit-code` — all are workspace-author-metadata / VCS-command tokens Lock 14 + Cargo + Git themselves sanction, not bbnf substrate. F-V4-α-F-1 introduces only the inline citation tokens `§0.2` and `reconciliation block (lines 73-84)` — purely documentary anchor-correction.

No new parallel substrate. No new sidecar producer. No public-substrate-API surface slip.

### §4.2 — Track 1 ≡ Track 2 collapse scan

The V4 state preserves both the F-15 `track2_entry_point` column (SYNTHESIS:240) and the C-1 α-C §2 P-7 triple gate (α-C:348-385). The V4 micro-fold packet did not touch SYNTHESIS or α-C; both anchors are byte-identical to V3. The `xtask gate-json` rejection logic continues to wire through the same gate path that rejects empty equality columns from C-2 (α-E §6 same-wave consumer plan at lines 487-490).

No Track 1 ≡ Track 2 collapse vector surfaced in V4.

### §4.3 — Renamed-scanner Lock 1 violation scan

The V4 state preserves E-4's module-path discipline (α-E:514-524, 545-547) naming `runtime::ext::` / `runtime::sidecar::` / `runtime::union::` / `runtime::cursor::` as pre-emptive REJECT targets. The α-C P-7 clause (c) (distinct buffer addresses) is the runtime correlate; clause (b) (distinct concrete `Sink` types via `TypeId` inequality) is the compile-time correlate. The triad still works in tandem to catch a renamed scanner sharing either the buffer or the sink type even when the symbol path is fresh.

No renamed-scanner violation surfaced in V4.

### §4.4 — V4-specific micro-fold cross-check

The V4 micro-fold packet contains exactly two folds: F-V4-α-E-1 (α-E §5 jq path repair + `--no-deps` + `--exit-code` + roster-count generalisation) and F-V4-α-F-1 (HANDOFF §7 citation correction `§1.3` → `§0.2`). Their edit domains:

- F-V4-α-E-1 touches α-E §5 lines 362-387 only (12-for-12 substitution; net zero line shift). α-E §6's C-4 / Lock-1 triad / module-path discipline (lines 437-558) is untouched. CH5 surface in α-E is preserved at identical V3 line addresses.
- F-V4-α-F-1 touches HANDOFF §7 line 196 only (1-for-1 inline token swap; zero line shift). The CH5 substrate-refusal bullet (lines 233-236) is untouched and at unchanged absolute address. Other §7 refusal bullets (G-SIMD-policy 211-215, P-7 plane-collapse 223-227, etc.) are unchanged.

Neither fold introduces a new substrate, a parallel producer, a renamed scanner, or a Track-collapse vector.

The V4 commit body's own attribution of the F-V4-α-E-1 fold is `CH1 V3 REV-1` (jq path correctness) and of F-V4-α-F-1 is `CH1 V3 REV-2` (citation anchor correctness). Both are CH1-surface remediations; CH5 surface was never on the fold-list.

### §4.5 — Convergence

Per `ORCHESTRATOR.md §3Z`, convergence requires ≥ 95 % ACCEPT for two consecutive cycles. CH5 logged V2 = 100 %, V3 = 100 %, and now V4 = 100 % — three consecutive cycles at the ceiling, double the two-consecutive-cycle bar. The CH5 lens has been at lock-state since V2 close; V3 and V4 simply reconfirm.

## §5 — Recommended folds for V5 (if any)

**None.** Every V2 / V3 CH5 anchor persists byte-for-byte in the V4 state at unchanged absolute line addresses (the V4 micro-fold packet's two folds are 12-for-12 and 1-for-1 substitutions inducing zero net line shift). The V4 micro-fold packet's two folds target CH1 surfaces (executable-correctness + citation-resolution) and bind verbatim to V3 CH1 REV-1 + REV-2 prescriptions; neither introduces a CH5-surface defect. The fresh-finding scan surfaced zero new REJECT and zero new REVISE.

CH5 verdict for V4: the substrate-union architecture is locked. The Lock-1 triad propagates coherently. The Track 1 ≡ Track 2 boundary is mechanically enforced by the triple gate. The renamed-scanner-with-shared-buffer slip is closed by the module-path discipline plus the buffer-address inequality check. No further CH5 fold is required for the SK-V14 alpha-hardening bracket.

If V5 fires as the bracket-close confirming pass (CH1 V4 + CH1 V5 would then satisfy the §3Z rule on CH1's own terms, since CH1 V3 was below ceiling), CH5 will reconfirm at 100 % under the same anchor-verification methodology used here. CH5 carries no outstanding obligation into V5.

The lens releases to G-Alpha auto-sign per the SK-V14 ORCHESTRATOR-PROMPT pin. The orchestrator proceeds directly to S-P0 per the §3Z multi-cycle convergence rule on CH5's own terms.
